--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Getaway Shootout Unblocked</title>
 	<link rel="canonical" href="https://ubg44.github.io/GetawayShootout/" />
 	<script>
-		window.location= "https://ubg44.github.io/GetawayShootout/";
+		window.location= "https://rydrweb.github.io/getawayshootout";
 	</script>
 	<script>
 	window.config = {
